# newsletter

./: '  .gitignore  Cargo.toml  DockerFile  Dockerfile  Readme.md  configuration.yaml.sample  spec.yaml  techstack.md  techstack.yml
configuration/: base.yaml.sample
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
