[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"]}
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"  
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
once_cell = "1"
tracing-actix-web = "0.6"
serde-aux = "3"
unicode-segmentation = "1"
validator ="0.14"
fake ="~2.3"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]
[dev-dependencies]
claim = "0.5"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
